# Mental-Health-Tracker

./: ApiServer.cpp  ApiServer.h  Base Idea.txt  CMakeLists.txt  Database.cpp  Database.h  Encryption.cpp  Encryption.h  JournalManager.cpp  JournalManager.h  MoodTracker.cpp  MoodTracker.h  README.md  app.js  dashboard.html  index.html  intro.html  journal.html  main.cpp  mainfile.md  mood.html  schema.sql  settings.html  style.css
